--- a/RevitPlugin/RevitPlugin.csproj
+++ b/RevitPlugin/RevitPlugin.csproj
@@ -105,7 +105,7 @@
     <Compile Include="GenAlgorithms\AreaTournamentSelection.cs" />
     <Compile Include="GenAlgorithms\RoomGene.cs" />
     <Compile Include="Generate.cs" />
-    <Compile Include="GenerateCommand.cs" />
+    <Compile Include="MainClass.cs" />
     <Compile Include="Model\RoomParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CommandSetupVM.cs" />
